(Format: Year/Month/Day)
Changes for 0.9.11
*04/09/11:
  * Fixed issues with Strut and multiple heads (Thanks Mathieu De Zutter)
    Screen.hh/cc, HeadArea.hh/cc, Slit.cc, Toolbar.cc, Ewmh.cc
    Strut.hh/cc, ToolFactory.cc, fluxbox.cc, FbTk/Menu.hh/cc
  * Fix issues that caused unnecessary X errors (Simon)
    fluxbox.cc Window.cc FbTk/Menu.cc FbTk/FbPixmap.cc FbTk/FbWindow.hh/cc
*04/09/10:
  * Cosmetic and cleanup changes to FbTk/* (Mathias)
      - tabs -> spaces, wrong indention etc in all mentioned
        files and
        FbTk/EventHandler.cc FbTk/StringUtil.(cc|hh) Ewmh.cc
      - using FbDrawable::s_display now instead of
        FbTk::App::instance()->display()
        FbTk/FbPixmap.(cc|hh) FbTk/FbWindow.(cc|hh)
        FbTk/FbPixmap.cc FbTk/XftFontImp.cc
      - added warning about "wrong" wallpapersetter
        FbTk/FbPixmap.cc
      - removed old codefragment from XmbFontImp
        FbTk/XmbFontImp.cc
  * Clean up some unused variables (thanks Ryan O'Hara)
    FbTk/XLayer.cc
*04/09/09:
  * tidy+replace qiv with display in screenshot, add jpg option (Han)
    fluxbox-generate_menu.in
  * Added forgotten [macrocmd] to menuitems (Mathias)
    MenuCreator.cc
  * Cleanup of code (Mathias)
    - removed codeduplicates of ::getRootPixmap, added FbPixmap::getRootPixmap instead
    Screen.(cc|hh) FbTk/Menu.cc FbTk/FbWindow.cc FbTk/FbPixmap.cc
*04/09/04:
  * Fix duplicate icons in icon list with amsn (Henrik)
    - Check Fluxbox::update(FluxboxWindow::stateSig),
      the win.screen().addIcon
    Screen.cc
  * Fix crash on shutdown (Henrik)
    - workspacemenu must be destroyed before
      clientlists
    Screen.cc
*04/09/03:
  * Fix crash on startup on amd64 (Simon)
    - We may need to review usages of 0 as opposed to NULL
    - Thanks to Jason Johnston (xoritor) for assistance debugging
    XmbFontImp.cc
  * Added -nearmouse to FbRun (Mathias)
    main.cc
*04/09/02:
  * Fix crash when in windowmenu->submenu and closing the app (Mathias)
    Remember.cc