@@ -1,6 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.11
 *04/09/11:
+  * Ignore 32-bit visuals for now when selecting (Simon)
+    - should fix problems with Composite being enabled in X.org
+    FbRootWindow.cc
   * Fixed issues with Strut and multiple heads (Thanks Mathieu De Zutter)
     Screen.hh/cc, HeadArea.hh/cc, Slit.cc, Toolbar.cc, Ewmh.cc
     Strut.hh/cc, ToolFactory.cc, fluxbox.cc, FbTk/Menu.hh/cc
